Added Menu Items Component

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,3 +10,11 @@ a:hover {
 .help-text {
   color: grey;
 }
+
+.border-right {
+  border-right: 2px solid rgb(219, 219, 219);
+}
+
+.border-left {
+  border-left: 2px solid rgb(219, 219, 219);
+}
