Implemented Delete functions for each Model
Made modal spinner better looking

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,6 +3,18 @@ a:hover {
  cursor:pointer;
 }
 
+.spinner-center {
+  margin: auto;
+  width: 35%;
+  padding-top: 10px;
+}
+
+.spinner-message {
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 8px;
+}
+
 .font-bold {
   font-weight: bold;
 }
