--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,6 +3,12 @@ a:hover {
  cursor:pointer;
 }
 
+.scrollable {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 165px;
+}
+
 .spinner-center {
   margin: auto;
   width: 35%;
