Spinner padding on left

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,10 @@ a:hover {
   cursor: pointer;
 }
 
+.spinner-padding-left {
+  padding-left: 50px;
+}
+
 .production-lines-well {
   overflow-x: hidden;
   overflow-y: auto;
